--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.12"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^8.3.4"
+multipledispatch = "^1.0.0"
 
 [build-system]
 requires = ["poetry-core"]
