--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,10 @@ python = "^3.12"
 pytest = "^8.3.4"
 multipledispatch = "^1.0.0"
 
+
+[tool.poetry.group.dev.dependencies]
+black = "^25.1.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
